--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 DB_USERNAME=pgAdmin
 DB_PASSWORD=pgAdmin
-DB_NAME=nobejs_testing
+DB_NAME=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_DIALECT=pg
 DEBUG=true
 PORT=3000
-AMQP_URL=
