--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "nobe:genuser": "node ./core/utils/randomUser",
     "nobe:version": "node ./core/version",
     "test": "jest --runInBand",
-    "serve": "ENVFILE=.env DEBUG=true nodemon server.js",
+    "serve": "env ENVFILE=.env DEBUG=true nodemon server.js",
     "start": "node server.js",
     "nobe:update": "node ./update && yarn nobe:version",
     "db": "knex",
-    "db:migrate": "ENVFILE=.env knex migrate:latest",
-    "db:rollback": "ENVFILE=.env knex migrate:rollback",
-    "db:migration": "ENVFILE=.env knex migrate:make",
+    "db:migrate": "env ENVFILE=.env knex migrate:latest",
+    "db:rollback": "env ENVFILE=.env knex migrate:rollback",
+    "db:migration": "env ENVFILE=.env knex migrate:make",
     "release": "gh release create",
     "bump": "npm version patch --git-tag-version=false && node core/syncVersion.js && git commit -am 'Commit version.md' && git push origin master --tags",
     "bump:patch": "npm version patch",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@sentry/node": "^6.16.1",
     "@sentry/tracing": "^6.16.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^10.0.0",
     "extract-zip": "^2.0.1",
     "fastify": "^4.1.0",
